fix: 只有 String 类型才设置 Size 注解

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,11 @@
         </dependency>
     </dependencies>
 
+    <properties>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+    </properties>
+
     <distributionManagement>
         <!-- Publish the versioned releases here -->
         <repository>
